--- a/spring_mvc/mvc/src/main/webapp/angularjs/index.html
+++ b/spring_mvc/mvc/src/main/webapp/angularjs/index.html
@@ -1,24 +1,16 @@
-<%@ taglib uri="http://java.sun.com/jsp/jstl/core" prefix="c"%>
-<%@ page session="false" pageEncoding="utf-8"%>
+<!doctype html>
 <html lang="en" data-framework="angularjs">
-<head>
-<title>Home</title>
-</head>
-<meta charset="utf-8">
-<title>AngularJS • TodoMVC</title>
-<link rel="stylesheet" href="angularjs/node_modules/todomvc-common/base.css">
-<link rel="stylesheet" href="angularjs/node_modules/todomvc-app-css/index.css">
-<style>
-[ng-cloak] {
-	display: none;
-}
-</style>
-</head>
-<body ng-app="todomvc">
-	<ng-view />
+	<head>
+		<meta charset="utf-8">
+		<title>AngularJS • TodoMVC</title>
+		<link rel="stylesheet" href="node_modules/todomvc-common/base.css">
+		<link rel="stylesheet" href="node_modules/todomvc-app-css/index.css">
+		<style>[ng-cloak] { display: none; }</style>
+	</head>
+	<body ng-app="todomvc">
+		<ng-view />
 
-	<P>The time on the server is ${serverTime}.</P>
-	<script type="text/ng-template" id="todomvc-index.html">
+		<script type="text/ng-template" id="todomvc-index.html">
 			<section id="todoapp">
 				<header id="header">
 					<h1>todos</h1>
@@ -71,13 +63,13 @@
 				<p>Part of <a href="http://todomvc.com">TodoMVC</a></p>
 			</footer>
 		</script>
-	<script src="angularjs/node_modules/todomvc-common/base.js"></script>
-	<script src="angularjs/node_modules/angular/angular.js"></script>
-	<script src="angularjs/node_modules/angular-route/angular-route.js"></script>
-	<script src="angularjs/js/app.js"></script>
-	<script src="angularjs/js/controllers/todoCtrl.js"></script>
-	<script src="angularjs/js/services/todoStorage.js"></script>
-	<script src="angularjs/js/directives/todoFocus.js"></script>
-	<script src="angularjs/js/directives/todoEscape.js"></script>
-</body>
+		<script src="node_modules/todomvc-common/base.js"></script>
+		<script src="node_modules/angular/angular.js"></script>
+		<script src="node_modules/angular-route/angular-route.js"></script>
+		<script src="js/app.js"></script>
+		<script src="js/controllers/todoCtrl.js"></script>
+		<script src="js/services/todoStorage.js"></script>
+		<script src="js/directives/todoFocus.js"></script>
+		<script src="js/directives/todoEscape.js"></script>
+	</body>
 </html>
